# pyslac

./: .env.dev  .env.dev.docker  .env.dev.local  .env.local-run  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cs_parameters.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/actions/setup-python-build-env/: action.yml
.github/workflows/: publish-to-pypi.yml  pull-request.yml
pyslac/: enums.py  environment.py  layer_2_headers.py  messages.py  session.py  utils.py
pyslac/examples/: cs_configuration.json  ev_slac_scapy.py  multiple_slac_sessions.py  single_slac_session.py
pyslac/sockets/: async_linux_socket.py
slac/: environment.py  layer_2_headers.py  main.py  session.py  utils.py
slac/examples/: cs_configuration.json  ev_slac_scapy.py  multiple_slac_sessions.py  single_slac_session.py
slac/sockets/: async_linux_socket.py  enums.py
tests/: Dockerfile  Makefile  conftest.py  pyproject.toml  test_slac_messages.py  test_slac_session.py  test_slac_version.py  test_version_pyproject_toml.py
tests/slac/: enums.py  main.py  messages.py  utils.py
tests/slac/examples/: ev_slac_scapy.py
tests/slac/sockets/: async_linux_socket.py
