[tool.poetry]
name = "slac"
version = "0.4.0"
description = "SLAC Protocol implementation, defined in ISO15118-3"
authors = ["André Duarte <andre@switch-ev.com, andre14x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.5"
mqtt-api = { version = "^0.18.1", source = "pypi-switch"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^3.0.0"
pytest-pylint = "^0.18.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.16.0"
black = "21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-switch"
url = "https://pypi.switch-ev.com/simple/"
default = false
secondary = true

[tool.poetry.scripts]
slac = 'slac.main:run'
