[tool.poetry]
name = "pyslac"
version = "0.8.3"
description = "SLAC Protocol implementation, defined in ISO15118-3"
authors = ["André Duarte <andre@switch-ev.com, andre14x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^3.0.0"
pytest-pylint = "^0.18.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.18.3"
black = "22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

